--- a/index.html
+++ b/index.html
@@ -2,30 +2,32 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Chat Gratis Firebase</title>
+  <title>Chat Firebase Sederhana</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f3f3f3; }
     #pesan { border: 1px solid #aaa; height: 250px; overflow-y: auto; padding: 5px; background: #fff; }
+    #online { margin: 10px 0; font-size: 14px; color: green; }
     input { margin: 5px; padding: 5px; }
   </style>
 </head>
 <body>
   <h2>Chat Online 🚀</h2>
+  <div id="online">Online: 0</div>
   <div id="pesan"></div>
   <input id="nama" placeholder="Nama" />
   <input id="teks" placeholder="Ketik pesan..." />
   <button onclick="kirim()">Kirim</button>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+  <!-- Firebase SDK versi lama (compat, gampang dipahami) -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
   <script>
-    // Config dari projectmu
+    // Config Firebase projectmu
     const firebaseConfig = {
       apiKey: "AIzaSyDmRXVOtr8PWq2BZgb_j6QpvCCZQwYAJVI",
       authDomain: "koneksi-b3262.firebaseapp.com",
-      databaseURL: "https://koneksi-b3262-default-rtdb.firebaseio.com", // PENTING iki ditambahno
+      databaseURL: "https://koneksi-b3262-default-rtdb.firebaseio.com",
       projectId: "koneksi-b3262",
       storageBucket: "koneksi-b3262.firebasestorage.app",
       messagingSenderId: "131578716927",
@@ -33,11 +35,10 @@
       measurementId: "G-C3X0E51W7Q"
     };
 
-    // Inisialisasi Firebase
-    const app = firebase.initializeApp(firebaseConfig);
+    firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // Tampilno pesan real-time
+    // Bagian Chat
     const pesanDiv = document.getElementById("pesan");
     db.ref("chat").on("child_added", snap => {
       let data = snap.val();
@@ -45,7 +46,6 @@
       pesanDiv.scrollTop = pesanDiv.scrollHeight;
     });
 
-    // Fungsi kirim pesan
     function kirim() {
       let nama = document.getElementById("nama").value;
       let teks = document.getElementById("teks").value;
@@ -54,6 +54,41 @@
         document.getElementById("teks").value = "";
       }
     }
+
+    // Bagian Deteksi Online User
+    const onlineDiv = document.getElementById("online");
+    const namaInput = document.getElementById("nama");
+
+    // generate ID unik tiap device
+    const deviceId = "user_" + Math.random().toString(36).substr(2, 9);
+
+    // nyambung & diskonek
+    const connectedRef = db.ref(".info/connected");
+    connectedRef.on("value", snap => {
+      if (snap.val() === true) {
+        let nama = namaInput.value || "Anon";
+        const userRef = db.ref("online/" + deviceId);
+        userRef.onDisconnect().remove(); // otomatis ilang pas user mati koneksi
+        userRef.set({ nama: nama, time: Date.now() });
+      }
+    });
+
+    // update jumlah user online
+    db.ref("online").on("value", snap => {
+      let data = snap.val();
+      if (data) {
+        let list = Object.values(data).map(u => u.nama);
+        onlineDiv.innerHTML = "Online: " + list.length + " (" + list.join(", ") + ")";
+      } else {
+        onlineDiv.innerHTML = "Online: 0";
+      }
+    });
+
+    // ganti nama realtime
+    namaInput.addEventListener("input", () => {
+      const userRef = db.ref("online/" + deviceId);
+      userRef.update({ nama: namaInput.value || "Anon" });
+    });
   </script>
 </body>
 </html>
